name:                mcmc-types
version:             0.1.0.3
synopsis:            Common types for sampling.
description:         Common types for sampling.
homepage:            http://github.com/jtobin/mcmc-types
license:             MIT
license-file:        LICENSE
author:              Jared Tobin
maintainer:          jared@jtobin.ca
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Sampling.Types
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 4.8
    , containers

